@@ -1,5 +1,9 @@
 Changes for APR 1.3.0
 
+  *) Provide APR_VERSION_AT_LEAST() macro for applications which 
+     want to enable features based on a required level of APR.
+     [Jeff Trawick]
+
   *) jlibtool: Teach to use static libraries with -static.
      [Justin Erenkrantz]
 
